# chatgpt-pre-commit-hooks

./: .editorconfig  .flake8  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .vale.ini  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: template.bug.yml  template.feature_request.yml  template.question.yml
.github/scripts/: test_repo.py
.github/workflows/: reuse.ghdiag.yml  workflow.ci.yml  workflow.release.draft.yml  workflow.release.yml
chatgpt_pre_commit_hooks/: __init__.py  base.py  chatgpt_commit_message.py  hook_chatgpt_commit_message.py  logger.py  main.py  utils.py
demo/: .pre-commit-config.yaml  chatgpt_commit_message.tape  init.tape  vhs_demo_repo.sh
docs/: chatgpt_commit_message.md
tests/repo/: .gitignore  .pre-commit-config.yaml
